--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,7 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -13,19 +9,67 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  margin: 0;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo_place_header {
+  background-image: url("../images/logo_place_header.svg");
+  background-size: 228px 32px; 
+  width: 228px;                
+  height: 32px;               
+  position: absolute;         
+  top: 30px; 
+  left: 64px;                    
+}
+
+.header__title {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 64px;
+  margin-top: 0;
+  width: 730px;
+  height: 100vh;
+  font-size: 102px;
+  font-weight: 600;
+  line-height: 96px;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute; 
+  bottom: 0;      
+  right: 0;  
+  z-index: 2; 
+}
+
+.header__subtitle{
+  position: absolute; 
+  width: 388px; 
+  left: 64px;
+  bottom: 30px;
+  font-size: 18px; 
+  line-height: 25px; 
+  font-weight: normal; 
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute; 
+  top: 64px;        
+  right: 0;          
+  z-index: 1; 
 }
 
-/* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+
+
