--- a/styles/style.css
+++ b/styles/style.css
@@ -6,70 +6,114 @@
 }
 
 .header {
-  height: 100vh;
+  height: auto;
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
   margin: 0;
+  position: relative;
 }
 
 .logo_place_header {
   background-image: url("../images/logo_place_header.svg");
-  background-size: 228px 32px; 
-  width: 228px;                
-  height: 32px;               
-  position: absolute;         
-  top: 30px; 
-  left: 64px;                    
+  background-size: 228px 32px;
+  width: 228px;
+  height: 32px;
+  position: absolute;
+  top: 30px;
+  left: 64px;
 }
 
 .header__title {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  padding-top: 10%;
   margin-left: 64px;
-  margin-top: 0;
   width: 730px;
-  height: 100vh;
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
+  text-align: left; 
 }
 
 .header__main-illustration {
   width: 765px;
   height: 608px;
-  position: absolute; 
-  bottom: 0;      
-  right: 0;  
-  z-index: 2; 
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
 }
 
-.header__subtitle{
-  position: absolute; 
-  width: 388px; 
+.header__subtitle {
+  position: absolute;
+  width: 388px;
   left: 64px;
   bottom: 30px;
-  font-size: 18px; 
-  line-height: 25px; 
-  font-weight: normal; 
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
 }
 
 .header__square-pic {
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  position: absolute; 
-  top: 64px;        
-  right: 0;          
-  z-index: 1; 
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 1;
 }
 
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+.description {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
 }
 
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  flex-wrap: wrap;
+  margin: 0;
+}
 
+.two-columns__brief {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f80ed;
+  width: 175px;
+  margin: 0;
+}
+
+.two-columns__main-text {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  min-width: 784px;
+  gap: 15px;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.no-margin-top {
+  margin-top: 0;
+}
+
+.no-margin-botton {
+  margin-bottom: 0;
+}
+
+.digits {
+  margin-top: 100px;
+}
