--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
   margin-top: 80px;
 }
 
-/* ------ */
+/* ---header--- */
 
 .header {
   min-height: 600px;
@@ -73,7 +73,13 @@
   z-index: 1;
 }
 
-/* ------ */
+/* ---content--- */
+
+.content {
+  margin: 0;
+}
+
+/* ---description--- */
 
 .description {
   min-height: 600px;
@@ -81,7 +87,7 @@
   margin-top: 100px;
   display: flex;
   justify-content: center;
-  margin-bottom: 0k;
+  margin-bottom: -150px;
 }
 
 .two-columns {
@@ -90,7 +96,6 @@
   width: 80%;
   flex-wrap: wrap;
   margin: 0;
-  
 }
 
 .two-columns__brief {
@@ -107,7 +112,6 @@
   flex-direction: column;
   width: 80%;
   min-width: 784px;
-  
 }
 
 .two-columns__paragraph {
@@ -127,9 +131,86 @@
   margin: 30px 0 30px 0;
 }
 
-/* ------ */  
+/* ---digits--- */  
 
 .digits {
-  margin-top: 100px;
+  min-height: 600px;
+  max-height: 756px;
+  margin-top: 0px;
+  text-align: center;
 }
 
+.section-title {
+  width: 60%;
+  margin: 0 auto; 
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto; 
+  margin-bottom: 60px;  
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  display: grid;
+  width: 1100px;
+  grid-template-columns: repeat(4, 250px);
+  gap: 60px;
+  justify-content: center;
+  margin: 0 auto;
+  list-style: none;
+  padding: 0;
+}
+
+.table__cell {
+  padding: 20px;
+  text-align: left;
+}
+
+.table__heading {
+  margin-bottom: 20px; 
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.margin-bottom-20 {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+/* ---feynman--- */  
+
+.feynman {
+  margin-top: 100px;
+  margin-bottom: 0px;
+}
+
+
+/* ---kaufman--- */  
+
+.kaufman {
+  margin-top: 90px;
+  margin-bottom: 90px;
+}
+
+/* ---footer--- */  
+
+.footer {
+  margin-top: 60px;
+  margin-left: 40px;
+}
