--- a/styles/style.css
+++ b/styles/style.css
@@ -260,26 +260,27 @@
 .kaufman {
   margin-top: 0;
   padding-top: 90px;
-  margin-bottom: 90px;
   padding-bottom: 200px;
   background-color: var(--colorBLACKGREY);
-
+  position: relative;
+  overflow: hidden;
 }
 
 .table_theme_dark {
   grid-template-columns: repeat(5, 200px) !important; 
+  width: 1200px;
   display: grid;
   justify-content: center;
   list-style: none;
+  z-index: 2;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin: 0 auto;
+  z-index: 2;
 }
-
 
 .section-title_theme_dark {
   line-height: 1.15;
@@ -303,6 +304,7 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  margin-bottom: 20px;
 
   color: white;
   text-align: left;
@@ -317,17 +319,104 @@
   text-align: left;
 }
 
-.kaufman__triangle {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+.kaufman__triangle  {
   background-image: url("../images/kaufman-triangle.svg");
-
+  width: 877px; 
+  height: 877px; 
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0px;
+  right: -210px;
+  z-index: 1;
 }
 
 /* ---footer--- */  
 
 .footer {
-  margin-top: 60px;
-  margin-left: 40px;
+  background-color: var(--colorBLACKGREY);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: flex-start; 
+}
+
+.footer__columns {
+  padding-top: 60px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 0;
+}
+
+.footer__column {
+  flex-basis: 711px;
+  width: 90;
+  margin: 0;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column:nth-child(2) {
+  padding-right: 200px;
+  padding-left: 200px;
+  flex: 1; 
+  text-align: left;
+}
+
+.footer__column:last-child {
+  flex: 1;
+  text-align: left; 
+}
+
+.logo_place_footer {
+  padding-top: 0;
+  padding-left: 100px;
+  padding-bottom: 80px;
+}
+
+.footer__author {
+  font-size: 18px;
+  line-height: 25px; 
+  font-weight: normal;
+  color: white;
+  padding-top: 10px;
+  padding-left: 100px;
+}
+
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px; 
+  font-weight: 600;
+  color: white;
+  padding-bottom: 20px;
+  margin: 0;
+}
+
+.footer__column-links {
+  list-style: none;
+  padding: 0;
+  font-size: 18px;
+  line-height: 30px; 
+  font-weight: normal;
+}
+
+.footer__list-item {
+  margin-bottom: 10px;
+  color: white;
+}
+
+.footer__column-link {
+  font-size: 18px;
+  line-height: 25px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.footer__social–icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+  color: white;
 }
