--- a/blocks/kaufman.css
+++ b/blocks/kaufman.css
@@ -1,22 +1,23 @@
 
 .kaufman {
-    background-color: var(--colorBLACKGREY);
+  background-color: var(--colorBLACKGREY);
   
-    padding-top: 90px;
-    padding-bottom: 90px;
+  padding-top: 90px;
+  padding-bottom: 90px;
   
-    position: relative;
-    overflow: hidden;
-  }
+  position: relative;
+  overflow: hidden;
+}
   
-  .kaufman__triangle {
-    background-image: url("../images/kaufman-triangle.svg");
-    width: 877px;
-    height: 877px;
+.kaufman__triangle {
+  background-image: url("../images/kaufman-triangle.svg");
+  width: 877px;
+  height: 877px;
   
-    right: -210px;
-    top: 0;
+  right: -210px;
+  top: 0;
   
-    background-repeat: no-repeat;
-    position: absolute;
-  }
+  background-repeat: no-repeat;
+  position: absolute;
+  animation: rotation 20s linear infinite;
+} 
