--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,16 @@
 @import "../blocks/feynman.css";
 @import "../blocks/kaufman.css";
 
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
 :root {
   --colorBLUE: #2f80ed;
   --colorGREY: #f2f2f2;
